Workaround for Ubuntu 12.04 run time warning "LIBDBUSMENU-GLIB-WARNING **: Trying to remove a child that doesn't believe we're it's parent." Avoid calling gtk_widget_destroy() on a wxMenuBar attached to a frame Fixes #14292

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@71648 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775